@@ -3,6 +3,7 @@ TagLib 1.11 (Jan 30, 2016)
 
  * Better handling of PCM WAV files with a 'fact' chunk.
  * Better handling of corrupted APE tags.
+ * Efficient decoding of unsynchronized ID3v2 frames.
  * Fixed text encoding when saving certain frames in ID3v2.3 tags.
  * Several smaller bug fixes and performance improvements.
 
